# AutonomousResearchAgent

backend/: .gitignore  ai_agents_report.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: report_generator.py  research_graph.py  summarize.py
backend/app/api/: research_routes.py
backend/app/tools/: search.py  web_reader.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/favorites/: page.tsx
frontend/app/history/: page.tsx
frontend/app/report/[id]/: page.tsx
frontend/app/search/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: history-list.tsx  mobile-header.tsx  report-display.tsx  search-bar.tsx  sidebar.tsx
